--- a/templates/layout/basic.html
+++ b/templates/layout/basic.html
@@ -25,7 +25,7 @@
                     <div class="dropdown-menu">
                         <a href="{% url 'main:profile' %}" class="dropdown-item">Мои объявления</a>
                         <a href="{% url 'main:profile_change' %}" class="dropdown-item">Изменить личные данные</a>
-                        <a href="{% url 'main:password_change' %}" class="dropdown-item">Изменить пароль</a>
+                        <a href="{% url 'main:password_reset' %}" class="dropdown-item">Изменить пароль</a>
                         <div class="dropdown-divider"></div>
                         <a href="{% url 'main:logout' %}" class="dropdown-item">Выйти</a>
                         <div class="dropdown-divider"></div>
@@ -40,13 +40,12 @@
         <div class="row">
             <nav class="col-md-auto nav flex-column border">
                 <a href="{% url 'main:index' %}" class="nav-link root">Главная</a>
-                <span class="nav-link root font-weight-bold">Недвижимость</span>
-                <a href="" class="nav-link">Жилье</a>
-                <a href="" class="nav-link">Склады</a>
-                <a href="" class="nav-link">Гаражи</a>
-                <span class="nav-link root font-weight-bold">Транспорт</span>
-                <a href="" class="nav-link">Легковой</a>
-                <a href="" class="nav-link">Грузовой</a>
+                {% for rubric in rubrics %}
+                    {% ifchanged rubric.super_rubric.pk %}
+                        <span class="nav-link root font-weight-bold">{{ rubric.super_rubric.name }}</span>
+                    {% endifchanged %}
+                    <a href="{% url 'main:by_rubric' pk=rubric.pk %}" class="nav-link">{{ rubric.name }}</a>
+                {% endfor %}
                 <a href="{% url 'main:other' page='about' %}" class="nav-link">О сайте</a>
             </nav>
             <section class="col border py-2">
