--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,6 +1,32 @@
 {% extends 'layout/basic.html' %}
 
 
+{% load thumbnail %}
+{% load static %}
+
+
 {% block content %}
     <h2>Последние 10 объявлений</h2>
+    {% if bbs %}
+        <ul class="list-unstyled">
+            {% for bb in bbs %}
+                <li class="media my-5 p-3 border">
+                    {% url 'main:detail' rubric_pk=rubric.pk pk=bb.pk as url %}
+                    <a href="{{ url }}{{ all }}">
+                        {% if bb.image %}
+                            <img src="{% thumbnail bb.image 'default' %}" class="mr-3" alt="">
+                        {% else %}
+                            <img src="{% static 'main/empty.jpeg' %}" class="mr-3" alt="">
+                        {% endif %}
+                    </a>
+                    <div class="media-body">
+                        <h3><a href="{{ url }}{{ all }}">{{ bb.title }}</a></h3>
+                        <div>{{ bb.content }}</div>
+                        <p class="text-right font-weight-bold">{{ bb.price }} руб.</p>
+                        <p class="text-right font-italic">{{ bb.created_at }}</p>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 {% endblock %}
