--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -1,6 +1,11 @@
 {% extends 'layout/basic.html' %}
 
 
+{% load thumbnail %}
+{% load static %}
+{#{% load bootstrap4 %}#}
+
+
 {% block title %}Профиль пользователя{% endblock %}
 
 
@@ -12,4 +17,26 @@
         <p>Здравствуйте!</p>
     {% endif %}
     <h3>Ваши объявления</h3>
+    {% if bbs %}
+        <ul class="list-unstyled">
+            {% for bb in bbs %}
+                <li class="media my-5 p-3 border">
+                    {% url 'main:profile_bb_detail' pk=bb.pk as url %}
+                    <a href="{{ url }}">
+                        {% if bb.image %}
+                            <img src="{% thumbnail bb.image 'default' %}" class="mr-3" alt="">
+                        {% else %}
+                            <img src="{% static 'main/empty.jpeg' %}" class="mr-3" alt="">
+                        {% endif %}
+                    </a>
+                    <div class="media-body">
+                        <h3><a href="{{ url }}">{{ bb.title }}</a></h3>
+                        <div>{{ bb.content }}</div>
+                        <p class="text-right font-weight-bold">{{ bb.price }} руб.</p>
+                        <p class="text-right font-italic">{{ bb.created_at }}</p>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 {% endblock %}
