--- a/templates/main/profile_detail.html
+++ b/templates/main/profile_detail.html
@@ -1,7 +1,7 @@
 {% extends 'layout/basic.html' %}
 
 
-{% block title %}{{ bb.title }} - {{ bb.rubric.name }}{% endblock %}
+{% block title %}{{ bb.title }}{% endblock %}
 
 
 {% block content %}
@@ -32,5 +32,5 @@
             {% endfor %}
         </div>
     {% endif %}
-    <p><a href="{% url 'main:by_rubric' pk=rubric_pk %}{{ all }}">Назад</a></p>
+    <p><a href="{% url 'main:profile' %}">Назад</a></p>
 {% endblock %}
